# TradeForge-AaaS

./: CHANGELOG.md  CONTRIBUTING.md  DELIVERY.md  LICENSE  Makefile  README.md  SECURITY.md  STRUCTURE.md  setup.sh  start.sh  test.sh
backend/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  i18n.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: defi_service.py
backend/app/strategies/: sma_crossover.py
backend/tests/: conftest.py  test_api.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: DEPLOY_RENDER.md  DEPLOY_STREAMLIT.md
frontend/: app.py  requirements.txt
frontend/components/: translation.py
frontend/pages/: 1_Backtest.py  2_Live_Trading.py  3_DeFi_Operations.py  4_Settings.py
